332 ==> 433653 - Please Add xattr support for metadata.
333 ==> 431748 - Feature Request: Search by month/day independent of year.
334 ==> 433573 - View - Separate Item - By Month : View by month only (not month year).
335 ==> 433727 - Does not show exif info from Panasonic FZ30 RAW file, inspite on Editor mode it's ok.
336 ==> 433423 - 'byline' into xmp panel editor is called 'creator' into Advanced Search.
337 ==> 433753 - Hang / crash when program is loading.
338 ==> 433852 - digiKam.metaengine: Cannot load metadata from file Error # 11: The file contains data of an unknown image type.
339 ==> 433850 - Not able to delete any tags.
340 ==> 433822 - digiKam doesn't read extended (xattr) attributes.
341 ==> 418274 - Improve Thumbnail transparency.
342 ==> 433984 - digiKam does not save tags as hierarchical tags in Extended Attributes.
343 ==> 434017 - Gone are the metadata embedded in the jpg file of some photos.
344 ==> 434049 - Faulty logic in "updateZoomAndSize", zoom level changed after preview image changed [patch].
345 ==> 434060 - digiKam doesn't drop deleted tags from Extended Attributes.
346 ==> 434092 - Disappeared for some time file menu, changes etc.
347 ==> 434103 - Window position on startup.
348 ==> 430865 - digiKam Full screen restart with top left corner in the middle screen.
349 ==> 195555 - Add a new option to use a constant scrolling speed with Kenburns effect [patch].
350 ==> 338034 - SETUP : Individual databases for each "collection".
351 ==> 434275 - Row height determined by number of tags even if they are not visible.
352 ==> 434302 - Sub-folders not selected when parent folder is selected.
353 ==> 376690 - Irritating behavior of list when moving images.
354 ==> 434112 - digiKam-7.2* crashes at first start after install while starting main view.
355 ==> 432760 - New items for people entries without seeing the mentioned photos.
356 ==> 434423 - Digikam displaying incorrect lens info in 'Properties - Photograph Properties'.
357 ==> 