@@ -29,6 +29,8 @@
 // KDE includes
 
 #include <klocalizedstring.h>
+#include <kactioncollection.h>
+#include <kxmlguiwindow.h>
 
 // Local includes
 
@@ -99,24 +101,36 @@ void FreeRotationToolPlugin::setup(QObject* const parent)
 
     QAction* const point1Action = new QAction(i18nc("@action", "Free Rotation Set Point 1"), parent);
     point1Action->setObjectName(QLatin1String("editorwindow_transform_freerotation_point1"));
-    point1Action->setShortcut(Qt::CTRL + Qt::SHIFT + Qt::Key_1);
 
     connect(point1Action, SIGNAL(triggered(bool)),
             this, SIGNAL(signalPoint1Action()));
 
     QAction* const point2Action = new QAction(i18nc("@action", "Free Rotation Set Point 2"), parent);
     point2Action->setObjectName(QLatin1String("editorwindow_transform_freerotation_point2"));
-    point2Action->setShortcut(Qt::CTRL + Qt::SHIFT + Qt::Key_2);
 
     connect(point2Action, SIGNAL(triggered(bool)),
             this, SIGNAL(signalPoint2Action()));
 
     QAction* const autoAdjustAction = new QAction(i18nc("@action", "Free Rotation Auto Adjust"), parent);
     autoAdjustAction->setObjectName(QLatin1String("editorwindow_transform_freerotation_autoadjust"));
-    autoAdjustAction->setShortcut(Qt::CTRL + Qt::SHIFT + Qt::Key_R);
 
     connect(autoAdjustAction, SIGNAL(triggered(bool)),
             this, SIGNAL(signalAutoAdjustAction()));
+
+    KXmlGuiWindow* const gui = dynamic_cast<KXmlGuiWindow*>(parent);
+
+    if (gui)
+    {
+        KActionCollection* const collection = gui->actionCollection();
+
+        collection->addAction(point1Action->objectName(),     point1Action);
+        collection->addAction(point2Action->objectName(),     point2Action);
+        collection->addAction(autoAdjustAction->objectName(), autoAdjustAction);
+
+        collection->setDefaultShortcut(point1Action,     Qt::CTRL + Qt::SHIFT + Qt::Key_1);
+        collection->setDefaultShortcut(point2Action,     Qt::CTRL + Qt::SHIFT + Qt::Key_2);
+        collection->setDefaultShortcut(autoAdjustAction, Qt::CTRL + Qt::SHIFT + Qt::Key_R);
+    }
 }
 
 void FreeRotationToolPlugin::slotFreeRotation()
