@@ -397,4 +397,5 @@ BUGFIXES:
 354 ==> 434112 - digiKam-7.2* crashes at first start after install while starting main view.
 355 ==> 432760 - New items for people entries without seeing the mentioned photos.
 356 ==> 434423 - Digikam displaying incorrect lens info in 'Properties - Photograph Properties'.
-357 ==> 
+357 ==> 434446 - "Set point" shortcut removed in ImageEditor in digikam version 6.4.0.
+358 ==> 
